--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "npx webpack-dev-server --mode development",
+    "dev": "unset PREFIX && . ~/.nvm/nvm.sh && nvm exec 16.17.1 npx webpack-dev-server --mode development",
     "build": "npx webpack --mode development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
